Get runtime-agent working with pet clinic tests